implemented stroke history

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             <input type="number" class="stroke-weight" value="3">
         </section>
         <button class="clear">X</button>
+        <button class="undo">Undo</button>
+        <button class="redo">Redo</button>
     </main>
     <script src="assets/js/main.js"></script>
 </body>
