added buttons, WIP

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <canvas></canvas>
     <main>
-        <section class="colors">
+        <section class="colors" id="colors">
             <input type="text" class="color-picker" value="#171717">
         </section>
         <section class="thickness">
@@ -18,6 +18,8 @@
         <button class="clear">X</button>
         <button class="undo">Undo</button>
         <button class="redo">Redo</button>
+        <button class="download">Down</button>
+        <button class="erase">Erase</button>
     </main>
     <script src="assets/js/main.js"></script>
 </body>
