undo and export to PNG added

--- a/index.html
+++ b/index.html
@@ -15,11 +15,19 @@
         <section class="thickness">
             <input type="number" class="stroke-weight" value="3">
         </section>
-        <button class="clear">X</button>
-        <button class="undo">Undo</button>
-        <button class="redo">Redo</button>
-        <button class="download">Down</button>
-        <button class="erase">Erase</button>
+        <button class="button clear">X</button>
+        <button class="button pen">
+            <img src="./assets/img/pen.png"/>
+        </button>
+        <button class="button erase">
+            <img src="./assets/img/eraser.png"/>
+        </button>
+        <button class="button undo">
+            <img src="./assets/img/undo.png"/>
+        </button>
+        <a class="button download" target="_blank" download="export.png" href="">
+            <img src="./assets/img/download.png"/>
+        </a> 
     </main>
     <script src="assets/js/main.js"></script>
 </body>
