--- a/index.html
+++ b/index.html
@@ -17,17 +17,20 @@
         <section class="thickness">
             <input type="number" class="stroke-weight" value="3">
         </section>
-        <button class="button clear" onClick="clearCanvas()">X</button>
-        <button class="button pen" onClick="activatePen()">
+        <button class="button clear" title="Clear canvas" onClick="clearCanvas()">X</button>
+        <button class="button pen" title="Pen" onClick="activatePen()">
             <img src="./assets/img/pen.png" />
         </button>
-        <button class="button erase" onClick="activateEraser()">
+        <button class="button erase" title="Erase" onClick="activateEraser()">
             <img src="./assets/img/eraser.png" />
         </button>
-        <button class="button undo" onClick="undo()">
+        <button class="button undo" title="Undo" onClick="undo()">
             <img src="./assets/img/undo.png" />
         </button>
-        <a class="button download" onClick="downloadImage()" target="_blank" download="export.png" href="">
+        <button class="button redo" title="Redo" onClick="redo()">
+            <img src="./assets/img/redo.png" />
+        </button>
+        <a class="button download" title="Download image" onClick="downloadImage()" target="_blank" download="export.png" href="">
             <img src="./assets/img/download.png" />
         </a>
     </main>
