added keyboard shortcuts

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
         <section class="thickness">
             <input type="number" class="stroke-weight" value="3">
         </section>
-        <button class="button clear" title="Clear canvas" onClick="clearCanvas()">X</button>
-        <button class="button pen" title="Pen" onClick="activatePen()">
+        <button class="button clear" title="Clear canvas (X)" onClick="clearCanvas()">X</button>
+        <button class="button pen" title="Pen (B)" onClick="activatePen()">
             <img src="./assets/img/pen.png" />
         </button>
-        <button class="button erase" title="Erase" onClick="activateEraser()">
+        <button class="button erase" title="Erase (E)" onClick="activateEraser()">
             <img src="./assets/img/eraser.png" />
         </button>
-        <button class="button undo" title="Undo" onClick="undo()">
+        <button class="button undo" title="Undo (Ctrl+Z)" onClick="undo()">
             <img src="./assets/img/undo.png" />
         </button>
-        <button class="button redo" title="Redo" onClick="redo()">
+        <button class="button redo" title="Redo (Ctrl+Y)" onClick="redo()">
             <img src="./assets/img/redo.png" />
         </button>
         <a class="button download" title="Download image" onClick="downloadImage()" target="_blank" download="export.png" href="">
