--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yearbook App</title>
-    <link rel="stylesheet" href="assets/css/main.min.css" />
+    <link rel="stylesheet" href="assets/css/main.css" />
 </head>
 
 <body>
     <canvas></canvas>
     <main>
         <section class="colors" id="colors">
-            <input type="text" class="color-picker" value="#171717">
+            <input type="color" class="color-picker" value="#171717">
         </section>
         <section class="thickness">
             <input type="number" class="stroke-weight" value="3">
